--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -8,6 +8,7 @@
     tools:context=".DashboardActivity"
     android:background="@color/backgroundLight">
 
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,41 +23,41 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/ubuntu"
                 android:text="O"
-                android:textSize="28sp"
-                android:fontFamily="sans-serif-medium"
-                android:textColor="#4A90E2"/>
+                android:textColor="#4A90E2"
+                android:textSize="30sp"/>
 
-            <TextView
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="n"
-                android:textSize="28sp"
-                android:fontFamily="sans-serif-medium"
+                android:textSize="30sp"
+                android:fontFamily="@font/ubuntu"
                 android:textColor="#417505"/>
 
-            <TextView
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="c"
-                android:textSize="28sp"
-                android:fontFamily="sans-serif-medium"
+                android:textSize="30sp"
+                android:fontFamily="@font/ubuntu"
                 android:textColor="#9013FE"/>
 
-            <TextView
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="e"
-                android:textSize="28sp"
-                android:fontFamily="sans-serif-medium"
+                android:textSize="30sp"
+                android:fontFamily="@font/ubuntu"
                 android:textColor="#F5A623"/>
         </LinearLayout>
 
@@ -67,9 +68,9 @@
             android:src="@mipmap/ic_calendar_icon_blue"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/menu_button"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
             android:padding="2dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginTop="8dp"
             android:tint="#4A90E2"/>
 
         <ImageView
@@ -77,11 +78,11 @@
             android:layout_height="30dp"
             android:id="@+id/menu_button"
             android:padding="4dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:src="@mipmap/ic_dots_blue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:tint="#4A90E2"/>
 
         <android.support.v7.widget.RecyclerView
@@ -90,10 +91,22 @@
             app:layout_constraintTop_toBottomOf="@+id/calendar_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"
-            android:paddingBottom="16dp"
+            android:layout_marginTop="32dp"
+            android:paddingBottom="8dp"
             android:id="@+id/calender_recycler">
         </android.support.v7.widget.RecyclerView>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="50dp"
+            android:layout_height="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/rounded_calendar_marker_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/calender_recycler"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
