--- a/app/src/main/res/layout/horizontal_calendar_item.xml
+++ b/app/src/main/res/layout/horizontal_calendar_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
+    android:id="@+id/calendar_item"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rounded_calendar_background">
