--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,16 @@
 
     <color name="primaryText">#FFFFFF</color>
     <color name="alternateText">#4A4A4A</color>
+
+    <color name="orange500">#ff9800</color>
+    <color name="amber500">#ffc107</color>
+    <color name="yellow400">#ffeb3b</color>
+    <color name="lime500">#cddc39</color>
+    <color name="lightgreen500">#8bc34a</color>
+    <color name="green500">#4caf50</color>
+    <color name="teal500">#4caf50</color>
+    <color name="cyan500">#00bcd4</color>
+    <color name="lightblue500">#00bcd4</color>
+    <color name="blue500">#00bcd4</color>
+
 </resources>
