--- a/app/src/main/res/layout/entry_recycler_item.xml
+++ b/app/src/main/res/layout/entry_recycler_item.xml
@@ -30,6 +30,7 @@
         android:textColor="@color/primaryText"
         android:paddingBottom="8dp"
         android:lineSpacingExtra="4dp"
+        android:maxLines="5"
         android:fontFamily="sans-serif-medium"/>
 
     <ImageView
@@ -39,6 +40,7 @@
         android:id="@+id/entry_emotion"
         app:layout_constraintTop_toBottomOf="@id/entry_item_content"
         android:tint="#FFFFFF"
+        android:foregroundTint="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
