--- a/app/src/main/res/layout/horizontal_calendar_item.xml
+++ b/app/src/main/res/layout/horizontal_calendar_item.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
     android:id="@+id/calendar_item"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/rounded_calendar_background">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:orientation="vertical"
         android:gravity="center"
+        android:id="@+id/date_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/rounded_calendar_background">
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,4 +42,18 @@
             android:textColor="@color/primaryText"
             android:fontFamily="sans-serif-medium"/>
     </LinearLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="50dp"
+        android:layout_height="8dp"
+        android:layout_marginTop="8dp"
+        android:id="@+id/select_marker"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/colorAccent"
+        android:visibility="invisible">
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
