--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="backgroundLight">#F2F2F2</color>
+    <color name="backgroundLight">#e0e0e0</color>
     <color name="backgroundDark">#424242</color>
 
     <color name="primaryText">#FFFFFF</color>
