--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="backgroundLight">#e0e0e0</color>
     <color name="backgroundDark">#424242</color>
+    <color name="cardBackground">#FFFFFF</color>
 
     <color name="primaryText">#FFFFFF</color>
     <color name="alternateText">#4A4A4A</color>
