--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -89,7 +89,7 @@
             app:layout_constraintTop_toBottomOf="@+id/calendar_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:paddingBottom="8dp"
             android:id="@+id/calender_recycler">
         </android.support.v7.widget.RecyclerView>
@@ -99,7 +99,9 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:id="@+id/entry_recycler"
         app:layout_constraintTop_toBottomOf="@id/dashboard_toolbar"
         app:layout_constraintStart_toStartOf="parent"
