--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -94,6 +94,25 @@
             android:id="@+id/calender_recycler">
         </android.support.v7.widget.RecyclerView>
 
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/calendar_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/calendar_button"
+            android:layout_marginTop="16dp"
+            android:paddingBottom="8dp"
+            android:visibility="gone">
+
+            <CalendarView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/calendar_full"
+                android:theme="@style/Theme.AppCompat.Light"
+                android:background="@color/cardBackground">
+            </CalendarView>
+        </FrameLayout>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -108,6 +127,41 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
     </android.support.v7.widget.RecyclerView>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/empty_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/backgroundLight">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/empty_text"
+            android:text="No entries found. Start adding to your journal now!"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:padding="16dp"
+            android:textColor="@color/alternateText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            app:layout_constraintTop_toBottomOf="@id/empty_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/drawn_arrow"
+            android:padding="16dp"/>
+
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
