--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,9 +17,9 @@
     <color name="lime500">#cddc39</color>
     <color name="lightgreen500">#8bc34a</color>
     <color name="green500">#4caf50</color>
-    <color name="teal500">#4caf50</color>
+    <color name="teal500">#009688</color>
     <color name="cyan500">#00bcd4</color>
-    <color name="lightblue500">#00bcd4</color>
-    <color name="blue500">#00bcd4</color>
+    <color name="lightblue500">#03a9f4</color>
+    <color name="blue500">#2196f3</color>
 
 </resources>
