--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="orange500">#ff9800</color>
     <color name="amber500">#ffc107</color>
     <color name="yellow400">#ffeb3b</color>
-    <color name="lime500">#cddc39</color>
+    <color name="lime500">#aed581</color>
     <color name="lightgreen500">#8bc34a</color>
     <color name="green500">#4caf50</color>
     <color name="teal500">#009688</color>
