--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/ubuntu"
                 android:text="O"
-                android:textColor="#4A90E2"
+                android:textColor="@color/once_color_1"
                 android:textSize="30sp"/>
 
             <android.support.v7.widget.AppCompatTextView
@@ -40,7 +40,7 @@
                 android:text="n"
                 android:textSize="30sp"
                 android:fontFamily="@font/ubuntu"
-                android:textColor="#417505"/>
+                android:textColor="@color/once_color_2"/>
 
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
                 android:text="c"
                 android:textSize="30sp"
                 android:fontFamily="@font/ubuntu"
-                android:textColor="#9013FE"/>
+                android:textColor="@color/once_color_3"/>
 
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
                 android:text="e"
                 android:textSize="30sp"
                 android:fontFamily="@font/ubuntu"
-                android:textColor="#F5A623"/>
+                android:textColor="@color/once_color_4"/>
         </LinearLayout>
 
         <ImageView
