implemented dark theme for dashboard and settings

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/dashboard_layout"
     tools:context=".views.dashboard.DashboardActivity"
     android:background="@color/backgroundLight">
 
@@ -150,16 +151,6 @@
             android:padding="16dp"/>
 
     </android.support.constraint.ConstraintLayout>
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/entry_add_button"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--android:src="@mipmap/ic_add_white"-->
-        <!--android:backgroundTint="@color/colorPrimary"-->
-        <!--android:layout_margin="16dp"/>-->
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
